<resources>
    <string name="app_name">ScheduleApp</string>
    <string name="input_name">Имя преподавателя</string>
    <string name="name">Преподаватель:</string>
    <string name="input_building">Номер корпуса</string>
    <string name="building">Корпус:</string>
    <string name="discipline">Предмет:</string>
    <string name="input_discipline">Название предмета</string>
    <string name="duration">Длительность:</string>
    <string name="input_duration">Количество часов</string>
    <string name="position">Должность:</string>
    <string name="input_position">Должность преподавателя</string>
    <string name="classroom">Аудитория:</string>
    <string name="input_classroom">Введите аудиторию</string>
    <string name="time">Время:</string>
    <string name="input_time">Введите время (hh:mm)</string>
    <string name="coupleNumber">Номер пары:</string>
    <string name="input_coupleNumber">Введите номер пары</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="aaaaaaaaaa">aaaaaaaaaa</string>
    <string name="dayOfMonth">День:</string>
    <string name="dayTime">Время:</string>
    <string name="grName">Группа:</string>
    <string name="input_grName">Название группы</string>
    <string name="grFaculty">Факультет:</string>
    <string name="input_grFaculty">Название факультета</string>
    <string name="grСourse">Курс:</string>
    <string name="input_grСourse">Номер курса</string>
    <string name="rbLecture">Лекция</string>
    <string name="rbPractice">Практика</string>
    <string name="madd">+</string>
    <string name="mDell">Удалить</string>
    <string name="mChange">Изменить</string>
    <string name="day_monday">ПН</string>
    <string name="day_tuesday">ВТ</string>
    <string name="day_wednesday">СР</string>
    <string name="day_thursday">ЧТ</string>
    <string name="day_friday">ПТ</string>
    <string name="day_saturday">СБ</string>
    <string name="day_sunday">ВС</string>
</resources>